--- a/Assesment/Asssesment_7/backend/EComApplication/EComApplication/appsettings.json
+++ b/Assesment/Asssesment_7/backend/EComApplication/EComApplication/appsettings.json
@@ -17,7 +17,7 @@
   "JwtConfig": {
     "Issuer": "https://localhost:7047",
     "Audience": "https://localhost:7047",
-    "Key": "s",
+    "Key": "",
     "TokenValidityMins": 30
   }
 }
